fixing horizontal scrollbar appearing

--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,14 @@ body{
 
 main{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    justify-content: center;
 
 }
 
 header{
     display: flex;
-    gap: 100px;
+    gap: 70px;
     width: 100%;
     height: 500px;
     align-items: center;
@@ -38,6 +36,7 @@ a{
     height: 50px;
 }
 footer{
+    width: 100%;
     height: 100px;
 }
 
@@ -49,16 +48,18 @@ footer{
     border-radius: 100%;
     width: 100%;
     height: 100%;
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 .profile{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     object-fit: cover;
-    width: 300px;
-   height: 300px;
+    max-width: 300px;
+    max-height: 300px;
     border-radius: 100%;
 }
 
@@ -68,7 +69,9 @@ footer{
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 100%;
+    max-width: 300px;
+    max-height: 50px;
 
 }
 
@@ -92,7 +95,7 @@ footer{
 }
 
 .title-aboutme{
-    font-size: 50px;
+    font-size: 25px;
 }
 
 .email-div{
@@ -101,31 +104,37 @@ footer{
     align-items: center;
     gap: 20px;
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     height: 100px;
     background-color: #302b63;
     border-radius: 10px;
 }
 
 .email-logo{
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
+     max-width: 50px;
+    max-height: 50px;
 }
 
 .aboutme-p{
     display: flex; 
     text-align: center;
     width: 100%;
+    max-width: 300px;
 }
 
-.container-cards{
+.container-cards {
     display: flex;
-    width: 100%;
-    max-width: 90%;
+    flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
     gap: 100px;
-    margin-top: 200px;
-    
+
+  }
+
+.container{
+    overflow-x: 'hidden';
 }
 
 .blog-card {
@@ -133,8 +142,7 @@ footer{
     justify-content: center;
     flex-wrap: wrap;
     height: 100%;
-    width: 100%;
-    max-width: 700px;
+    max-width: 500px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     color: black;
@@ -142,6 +150,7 @@ footer{
     text-align: center;
     transition: box-shadow 0.3s ease;
   }
+  
   
   .blog-card:hover {
     box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.75);
@@ -155,7 +164,8 @@ footer{
     justify-content: center;
     display: flex;
     width: 100%;
-    height: 450px;
+    height: 100%;
+    max-height: 450px;
     border-radius: 10px 10px 0px 0px;
     border: solid 1px black;
     overflow: hidden;
@@ -187,8 +197,10 @@ footer{
 }
 
 .icon{
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
+    max-width: 50px;
+    max-height: 50px;
 }
 
 .title{
@@ -199,7 +211,8 @@ footer{
 }
 
 .description{
-    width: 400px;
+    width: 100%;
+    max-width: 200px;
 }
 
 @media (max-width: 1200px) {
